<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>warp-reader</artifactId>
        <groupId>de.trundicho</groupId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>warp-reader-core</artifactId>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.1.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>warp-reader-plain-java</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>warp-reader-gwt</id>
            <build>
                <plugins>
                    <!-- GWT Maven Plugin -->
                    <plugin>
                        <groupId>net.ltgt.gwt.maven</groupId>
                        <artifactId>gwt-maven-plugin</artifactId>
                        <version>1.0-rc-6</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>import-sources</goal>
                                    <goal>compile</goal>
                                    <goal>import-test-sources</goal>
                                    <goal>test</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <moduleName>de.trundicho.warp.reader.core.WarpReaderCore</moduleName>
                            <moduleShortName>WarpReaderCore</moduleShortName>
                            <failOnError>true</failOnError>
                            <!-- GWT compiler 2.8 requires 1.8, hence define sourceLevel here if
                                you use a different source language for java compilation -->
                            <sourceLevel>1.8</sourceLevel>
                            <!-- Compiler configuration -->
                            <compilerArgs>
                                <!-- Ask GWT to create the Story of Your Compile (SOYC) (gwt:compile) -->
                                <arg>-compileReport</arg>
                                <arg>-XcompilerMetrics</arg>
                            </compilerArgs>
                            <!-- DevMode configuration -->
                            <warDir>${project.build.directory}/${project.build.finalName}</warDir>
                            <classpathScope>compile+runtime</classpathScope>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencyManagement>
                <dependencies>
                    <!-- ensure all GWT deps use the same version (unless overridden) -->
                    <dependency>
                        <groupId>com.google.gwt</groupId>
                        <artifactId>gwt</artifactId>
                        <version>2.8.0</version>
                        <type>pom</type>
                        <scope>import</scope>
                    </dependency>
                </dependencies>
            </dependencyManagement>
            <dependencies>
                <dependency>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-servlet</artifactId>
                    <scope>runtime</scope>
                </dependency>
                <dependency>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-user</artifactId>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-dev</artifactId>
                    <scope>provided</scope>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>